PR/38735: Jonathan A. Kollasch: add the ability for cgd to be used on top of wedges